--- a/slides/NLP-LLMpatterns.tex
+++ b/slides/NLP-LLMpatterns.tex
@@ -351,7 +351,8 @@ This can be computationally expensive unless some tricks are used.
 \begin{itemize}
 \item Alpaca Data: 52k English instruction examples generated using OpenAI’s text-davinci-003 with self-instruct.
 \item Evol-Instruct (Xu et al., April 2023): A rewritten set of 250k English instruction-response pairs based on the Alpaca data
-\item Vicuna ShareGPT: 70k English conversations shared by users and scraped from \item Baize data (Xu et al., April 2023)
+\item Vicuna ShareGPT: 70k English conversations shared by users and scraped from ChatGPT.
+\item Baize data (Xu et al., April 2023)
 \item databricks-dolly-15k (Conover et al., April 2023)
 \item OpenAssistant Conversations (Köpf et al., April 2023)
 \item LIMA data (Zhou et al., May 2023).
