--- a/slides/NLP-LLMpatterns.tex
+++ b/slides/NLP-LLMpatterns.tex
@@ -642,7 +642,7 @@ Source: \url{https://leftasexercise.com/2023/06/17/autonomous-agents-and-llms-au
 \begin{scriptsize}
 \begin{itemize}
 \item A second generation of benchmarks later emerged for tasks involving science, reasoning, multitasking accuracy, and truthfulness.
-\item To attain high accuracy on this test, models must possess extensive world knowledge and problem solving ability
+\item To attain high accuracy on this test, models must possess extensive world knowledge and problem solving ability.
 \item They typically require LLMs to generate a short, specific answer to close-ended problems that can be automatically validated (e.g., multiple-choice questions).
 \item Two main categories: knowledge-based and reasoning-based benchmarks.
 \item  Examples: AI2 Reasoning Challenge (25-shot), MMLU (5-shot), TruthfulQA (0-shot), and HellaSwag (10-shot).
