--- a/apunte/copy.tex
+++ b/apunte/copy.tex
@@ -102,6 +102,8 @@
 
 \section{Evaluación}
 
+Una parte muy relevante en la construcción de cualquier sistema de PLN es su evaluación. Por lo general muchos distintos métodos y modelos son comparados en el proceso de entrenamiento para poder decidir qué modelo será puesto en producción. Para  
+
 \begin{itemize}
  \item Consideremos solo tareas de clasificación de texto binario.
  \item Imagina que eres el CEO de Delicious Pie Company.
@@ -170,9 +172,7 @@ Por eso usamos precisión y recall en su lugar.
 \]
 
 \subsection{¿Por qué Precisión y Recall?}
-Considera nuestro clasificador tonto de pasteles que simplemente etiqu
-
-eta nada como "sobre pasteles".
+Considera nuestro clasificador tonto de pasteles que simplemente etiqueta nada como "sobre pasteles".
 
 \begin{itemize}
   \item Exactitud = 99.99\% (etiqueta correctamente la mayoría de los tweets como no relacionados con pasteles)
