--- a/apunte/copy.tex
+++ b/apunte/copy.tex
@@ -102,22 +102,20 @@
 
 \section{Evaluación}
 
-Una parte muy relevante en la construcción de cualquier sistema de PLN es su evaluación. Por lo general muchos distintos métodos y modelos son comparados en el proceso de entrenamiento para poder decidir qué modelo será puesto en producción. Para  
+La evaluación juega un papel crucial en la construcción de sistemas de PLN basados en aprendizaje automático. Al construir estos sistemas, es común llevar a cabo comparaciones y experimentos con diversos modelos durante el proceso de entrenamiento, con el fin de elegir el modelo más idóneo para su posterior implementación en producción. Generalmente, adoptamos un enfoque cuantitativo para evaluar modelos, contrastando las predicciones realizadas con las predicciones esperadas, y resumiendo estos resultados mediante métricas de evaluación. Este enfoque cuantitativo se prefiere debido a que un enfoque cualitativo o de inspección manual no resulta escalable. Ilustremos este proceso de evaluación con un ejemplo.
 
-\begin{itemize}
- \item Consideremos solo tareas de clasificación de texto binario.
- \item Imagina que eres el CEO de Delicious Pie Company.
- \item Quieres saber lo que la gente está diciendo sobre tus pasteles.
- \item Por lo tanto, construyes un detector de tweets de "Delicious Pie" con las siguientes clases:
-\begin{itemize}
-\item Clase positiva: tweets sobre Delicious Pie Co.
-\item Clase negativa: todos los demás tweets.
-\end{itemize}
-\end{itemize}
+
+\begin{example}
+Supongamos un problema de clasificación binaria, para la cual queremos comparar dos modelos de clasificación $m_1$ y $m_2$. Probamos los modelos sobre un conjunto de datos de prueba y obtenemos las siguientes predicciones.
+
+ 
+\end{example}
 
 
 
-\subsection{La Matriz de Confusión 2x2}
+
+
+
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|c|}
@@ -141,7 +139,6 @@ Una parte muy relevante en la construcción de cualquier sistema de PLN es su ev
 \[ \text{Exactitud} = \frac{VP + VN}{VP + FP + VN + FN} \]
 
 
-\subsection{Evaluación: Exactitud}
 ¿Por qué no usamos la exactitud como nuestra métrica?
 
 Imagina que vimos 1 millón de tweets:
@@ -158,7 +155,7 @@ Podríamos construir un clasificador tonto que simplemente etiquete todos los tw
 
 Por eso usamos precisión y recall en su lugar.
 
-\subsection{Evaluación: Precisión y Recall}
+
 \textbf{Precisión} mide el porcentaje de elementos que el sistema detectó (es decir, los elementos que el sistema etiquetó como positivos) que son realmente positivos (según las etiquetas de oro humanas).
 
 \[
@@ -171,7 +168,7 @@ Por eso usamos precisión y recall en su lugar.
 \text{Recall} = \frac{\text{Verdaderos Positivos}}{\text{Verdaderos Positivos + Falsos Negativos}}
 \]
 
-\subsection{¿Por qué Precisión y Recall?}
+
 Considera nuestro clasificador tonto de pasteles que simplemente etiqueta nada como "sobre pasteles".
 
 \begin{itemize}
