--- a/slides/NLP-PLM.tex
+++ b/slides/NLP-PLM.tex
@@ -175,7 +175,7 @@ p(\text{the fan saw Beckham play for Real Madrid STOP}) &= 2 \times 10^{-9}
 
 \item Related problems are optical character recognition, handwriting recognition.
 
-\item Acutally, Language Models are useful in any NLP tasks involving the generation of language (e.g., machine translation, summarization, chatbots).
+\item Actually, Language Models are useful in any NLP tasks involving the generation of language (e.g., machine translation, summarization, chatbots).
 
 \item The estimation techniques developed for this problem will be VERY useful for other problems in NLP.
 
